added email verification and otp sending
